cluster-components/istio-config/templates/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cni
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
