cluster-components/istio-config/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
  annotations:
    keepalived-operator.redhat-cop.io/keepalivedgroup: keepalived-operator/keepalivedgroup-router
    external-dns.alpha.kubernetes.io/target: "192.168.2.123"
spec:
  gatewayClassName: istio

  addresses:
  - value: 192.168.2.123
    type: IPAddress

  listeners:
  - name: default
    port: 80
    protocol: HTTP

    # Q: Could this be more specific for team namespaces
    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gitops.ticq.dev/ingress-type: "istio"

  - name: https
    port: 443
    protocol: HTTPS

    tls:
      mode: Terminate # If protocol is `TLS`, `Passthrough` is a possible mode
      certificateRefs:
      - kind: Secret
        group: ""
        name: cloud-ticq-org

    allowedRoutes:
      namespaces:
        selector:
          matchLabels:
            gitops.ticq.dev/ingress-type: "istio"
